traefik-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: my-app-ingress
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(\`myapp\`)
      kind: Rule
      services:
        - name: my-custom-app-service
          port: 80
